--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>L’ouverture des données publiques culturelles en pratique</title>
     <meta charset="utf-8">
     <meta name="author" content="Datactivist" />
-    <meta name="date" content="2019-07-18" />
+    <meta name="date" content="2019-07-19" />
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/datactivist.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/datactivist-fonts.css" rel="stylesheet" />
@@ -16,7 +16,7 @@ class: center, middle, inverse, title-slide
 # L’ouverture des données publiques culturelles en pratique
 ## Ministère de la Culture
 ### Datactivist
-### 18 Jul 2019
+### 19 Jul 2019
 
 ---
 
@@ -429,11 +429,6 @@ La formation du Partenariat pour un Gouvernement Ouvert a permis d'exposer plusi
 .center[&lt;img src="https://datactivist.coop/aaf/img/declaration.png" height="350"/&gt;]
 
 ---
-### [Le fonctionnement du PGO](http://www.opengovpartnership.org/sites/default/files/OGP_Booklet_20160911_FR.pdf)
-
-.reduite[.center[![](img/opengov.png)]]
-
----
 ### Depuis 2010 : l'ère des classements
 
 **[Le baromètre international de l'Open Data](https://index.okfn.org/place/)** est un classement de référence, tout comme l'Open Data Index de l'Open Knowledge Foundation
@@ -454,7 +449,7 @@ La formation du Partenariat pour un Gouvernement Ouvert a permis d'exposer plusi
 
 
 ---
-class: center, middle
+class: inverse, center, middle
 
 # 3. Éléments du cadre juridique de l'open data
 
@@ -606,7 +601,7 @@ La mise en ligne de données à caractère personnel sans anonymisation n'est pe
 Hors de ces cas, il faut .red[**[anonymiser les données](https://github.com/SGMAP-AGD/anonymisation/wiki/Guide-de-l'anonymisation)**] : elles ne doivent plus se référer à une personne réelle (exit les noms, identifiants…) et ne doivent plus être spécifiques à un individu mais communes à un ensemble de personnes. L’indexation de ces données par un moteur de recherche externe est proscrite.
 
 ---
-class: center, middle
+class: inverse, center, middle
 
 # 4 État-Plateforme et Open Gov
 
@@ -706,6 +701,271 @@ Data.gouv.fr est la plateforme **nationale** d'open data mais ce n'est pas la se
 + Des jeux de données directement publiés sur le site des producteurs de données, sans plateforme dédiée. Exemple : Insee
 
 ---
+
+class: inverse, center, middle
+
+# 5 Les success stories de l’open data culturel
+
+---
+
+### DoReMus :  DOing REusable MUsic Data
+
+.red[**Le pitch : La musique est partout, jouée, enregistrée, diffusée, écoutée, vendue, offerte, louée.**] 
+
+**Les fichiers de musique enregistrée sont partout**, stockés, streamés, échangés, vendus. Mais rien n’est plus difficile aujourd’hui que de trouver sur le web **l’histoire d’une œuvre musicale, son compositeur, son origine culturelle, ses paroliers, ses influences, ses reprises, ses interprétations**... Pourtant **ces connaissances existent** et sont décrites finement dans les systèmes d’information de quelques institutions culturelles et média dans le monde. 
+
+.center[&lt;img src="./img/DoReMus.png" height="200"/&gt;]
+
+---
+
+### Un projet de recherche en collaboration .red[avec de multiples partenaires culturels]
+
+Le projet s’appuie sur **l’expertise de catalogage des œuvres musicales** de : 
+
+* Radio France
+* la BnF
+* la Cité de la musique
+* du projet collaboratif Discotheka de la société Meaning Engines 
+* et sur un corpus de modèles préexistants, en particulier FRBRoo. 
+
+Les extensions et spécialisations d’ontologies et les vocabulaires permettent de décrire les œuvres et événements musicaux, de la musique traditionnelle à la musique classique, leurs relations avec les créateurs, leur environnement culturel, les événements liés à leur création, leurs interprétations, leur fonction sociale, les instruments, les genres musicaux… tout en s’inscrivant dans la continuité des catalogues d’œuvres existants.
+
+---
+
+### Le résultat ? 
+
+.red[**Un moteur de recherche] liant les données sur les dates des performances, les interprètes, les enregistrements, les instruments, les partitions, etc.. **
+
+Les experts des institutions ont collaboré pendant quatre ans avec plusieurs laboratoires de recherche et entreprises pour développer des prototypes d'applications innovantes : moteurs de recherche, système de recommandation, chatbot...
+
+* **Site du projet** : http://data.doremus.org/
+
+* **Github du projet** : https://github.com/DOREMUS-ANR 
+
+.reduite[![](./img/data.doremus.org.png)]
+
+
+---
+
+### L'application Overture 
+
+.pull-left[
+
+#### Fiche descriptive des données de performance d'une oeuvre musicale
+
+![](./img/Fiche-descriptive-performance-Doremus.png)
+
+]
+.pull-right[
+
+#### Données en lien direct : les oeuvres jouées le même jour et nom des interprètes
+
+![](./img/Linked-Data-Doremus.png)
+(*ici au Festival de Piano de la Roque d'Anthéron*)
+
+]
+
+
+---
+### Les Archives de la Planète .red[du musée Albert Kahn]
+
+* La collection d'autochromes d'Albert Kahn de 72 000 photographies en couleur sur plaques de verre prises entre 1909 et 1931 dans plus de 50 pays, est disponible en open data.
+
+* Le fonds iconographique est disponible sous la forme d’un jeu de données accessible à partir **du portail open data Hauts-de-Seine.**
+
+* Une **politique d’ouverture des données culturelles** et d’**accès à la culture pour tous**, mise en oeuvre par le Département des Hauts-de-Seine
+
+
+
+---
+
+### Un site dédié
+
+.center[![](./img/collections.albert-kahn.png)]
+
+http://collections.albert-kahn.hauts-de-seine.fr/
+
+---
+
+### Les portails institutionnels pour valoriser .red[les ressources culturelles numériques]
+
+
+[Le portail Data Culture : data.culture.gouv.fr](https://data.culture.gouv.fr) s'accompagne de ressources annexes :
+
+
+* Guide [ouverture et réutilisation des informations publiques numériques du secteur culturel](http://www.culturecommunication.gouv.fr/content/download/183534/2002721/version/1/file/GT_2-1-1.pdf) publié (*en janvier 2017*)
+
+* L'[open data culture en 2 minutes](http://www.dailymotion.com/video/xyqrun_tutoriel-de-l-open-data-culture_news) : vidéo tutoriel
+
+* Le rapport .[Ouverture et partage des données publiques culturelles] (http://www.culturecommunication.gouv.fr/content/download/94768/851739/version/1/file/201312_Rapport_Open_Data_Culturel.pdf) (*publié en décembre 2013*)
+
+* Le [guide data culture](http://www.culturecommunication.gouv.fr/var/culture/storage/culture_mag/donnees_culturelles2013/index.htm) (*publié en mars 2013*)
+
+---
+
+### Le site Data.bnf, .red[précurseur et innovant]
+
+Data.bnf.fr extrait, transforme et regroupe dans une **base commune** des données issues de ressources internes et extérieures, produites dans des formats différents, afin de les lier entre elles et de les rendre interopérables.
+Ses pages sont indexées par les moteurs de recherche,
+
+.center[&lt;img src="./img/data_BNF.png" height="300"/&gt;] 
+
+---
+
+### Data.bnf .red[permet]
+
+* **d’accéder aux ressources de la BnF directement depuis une page Web**, sans avoir à connaître préalablement les services de la BnF ;
+* de s’orienter dans les ressources de la BnF et de trouver éventuellement des ressources extérieures.
+* de décrire et identifier les documents conservés à la BnF, ainsi que les personnes ou organisations qui en sont les auteurs. 
+
+&gt; Le site permet de rassembler autour de ses pages auteur, œuvre, thème, date et lieu, des ressources de la Bibliothèque nationale de France, ainsi que des ressources extérieures. 
+
+**En juin 2016, data.bnf.fr dispose d'une couverture presque totale des données de bonne qualité des catalogues, avec notamment 2 millions d'auteurs à son actif.**
+
+---
+
+### Data.BnF se dote d'une API permettant les réutilisations
+
+Exemple : .red[**Gallicarte**], un projet de géolocalisation des résultats de recherche dans Gallica
+
+Ce projet consiste à afficher les résultats d’une recherche effectuée dans Gallica (Bibliothèque numérique de la BnF) sur une carte, et de visualiser, par exemple, l’ensemble d’un fonds photographique géolocalisé. Pour le grand public, la carte comme mode d‘affichage est d’utilisation simple. 
+
+.center[&lt;img src="./img/gallicarte.jpeg" height="200"/&gt;] 
+
+En savoir plus :  [Un projet issu du Hackathon de la BnF](http://gallicastudio.bnf.fr/projets-collaboratifs/gallicarte-un-projet-de-g%C3%A9olocalisation-des-r%C3%A9sultats-de-recherche-dans)
+
+---
+
+### Open GLAM : une communauté engagée et .red[un réseau mondial] 
+
+.red[**OpenGLAM**] est un réseau mondial de personnes et d'organisations engagées à ouvrir du contenu et des données détenues par des galeries d'art, des bibliothèques, des archives et des musées.
+
+* **GLAM** : Galleries, Libraries, Archives and Museums.
+
+.center[![](./img/open-GLAM.png)]
+
+---
+
+### Les politiques Open Acess : .red[Cleveland Museum of Arts (U.S)]
+
+Le 23 janvier 2019, le Cleveland Museum of Art a annoncé qu'il devenait une institution en libre accès, utilisant la désignation Creative Commons Zero (CC0) pour les images et les données haute résolution liées à sa collection. 
+
+Le public a la possibilité de partager, collaborer, remixer et réutiliser les images de plus de 30 000 œuvres d'art appartenant au domaine public de la collection, à des fins commerciales et non commerciales.
+
+En outre, des parties des informations sur les collections (métadonnées) de plus de 61 000 œuvres d'art, appartenant au domaine public et aux œuvres soumises à des droits d'auteur ou à d'autres restrictions, sont également disponibles.
+
+---
+
+### Les politiques Open Acess : Cleveland Museum of Arts (U.S)
+
+#### Voir [la vidéo de présentation du programme Open Access du musée](https://www.youtube.com/watch?v=c9DG4XZSH98)
+
+.center[
+&lt;iframe width="560" height="315" src="https://www.youtube.com/embed/c9DG4XZSH98" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen&gt;&lt;/iframe&gt;
+]
+
+
+.footnote[Source : http://www.clevelandart.org/open-access]
+
+---
+
+### Les politiques Open Acess : .red[le MET Museum]
+
+* Toutes les images issues d'œuvres du domaine public de la collection du Met sont disponibles sous la licence Creative Commons Zero (CC0)
+
+* Pour faciliter la recherche de ces images sur leur site Web, il est possible de filtrer les recherches par oeuvres tombant dans le domaine public. Toutes les images en Open Access sont marquées du logo CC0 sur leur page web respective.
+
+.center[&lt;img src="./img/MET_download_icon.jpg" height="250"/&gt;] 
+
+---
+
+### Le Met va plus loin .red[avec une API]
+
+L'API permet de lier la base de données du MET avec le Knowledge Graph de Google. 
+Ainsi, une simple recherche sur le moteur de recherche permet d'afficher des informations immédiates :
+
+.pull-left[
+
+Question formulée dans le moteur de recherche :  **"Who painted The Harvesters?"** 
+
+]
+
+.pull-right[ 
+
+.center[&lt;img src="./img/MET_google_box.jpg" height="370"/&gt;]
+
+]
+
+---
+
+### Susciter les réutilisations avec .red[un programme de partenariats]
+
+Exemple : **impliquer une école de graphisme à réaliser des visualisations**
+
+* Analyse de la [représentation du genre](https://churc.github.io/MajorStudio1/) dans la collection d'art moderne et contemporain du Met
+* Une [analyse de la forme des œuvres d'art au Met's Costume Institute](https://3milychu.github.io/pages/kmeansfashion.html), utilisant l'apprentissage automatique pour découvrir de nouvelles relations entre les objets au-delà des métadonnées disponibles.
+* Une évaluation de l'histoire de la collecte au Met et de l'évolution des pratiques de collecte au fil de l'histoire du Met
+
+.center[&lt;img src="./img/Dataviz_parsons_Met.jpg" height="200"/&gt;]
+
+---
+
+class: inverse, center, middle
+
+# 6 La conception d’une stratégie d’open data
+
+---
+
+## Ouvrir ses données : les étapes
+
+![](https://datactivist.coop/openbelgium/img/etapes.png)
+
+???
+
+L'institution est toujours la première réutilisatrice de ses propres données
+
+---
+## Réussir sa stratégie d'ouverture des données 
+
+- Au-delà de l'obligation légale : .red[**poser les objectifs**] poursuivis par la stratégie
+
+- Se donner les moyens de connaître la .red[**demande de données**] pour y répondre 
+
+- Travailler à la .red[**qualité des données**], garante d'usages réels
+
+- Mener le projet d'ouverture des données comme un projet de modernisation de l'administration (transversalité, agilité, lean...)
+
+???
+
+Une stratégie qui peut/doit englober la question de la data en général.
+Croiser aussi avec le RGPD ! 
+
+---
+## Réussir sa stratégie d'ouverture des données 
+
+- Une ouverture des données .red[**orientée vers l'utilisateur**] : pousser les données là où sont les usagers et non l'inverse. Enjeu essentiel de la .red[**découvrabilité**] des données
+
+- Construire une .red[**offre de services**] pour son écosystème (public et privé)
+
+- Distinguer ouverture de ses données, et infrastructures de partage des données en termes de gouvernance.
+
+???
+
+Le premier est le métier de l'acteur public, le deuxième l'est-il ? Quelle gouvernance des plateformes d'ouverture des données ?
+Aller vers un Etat(collectivité)-plateforme
+Tiers de confiance
+
+---
+## Réussir sa stratégie d'ouverture des données 
+
+- Aller vers un .red[**service public de la donnée culturelle**]
+
+- Poser la question des .red[**données d'intérêt général**]
+
+- .red[**Réarmer le service public**] à l'heure de la révolution des données : big data, algorithmie, apprentissage automatisé... 
+
+
+---
 ### Des politiques d'open data "de l'offre"
 
 .pull-left[
@@ -767,6 +1027,141 @@ Data.gouv.fr est la plateforme **nationale** d'open data mais ce n'est pas la se
 .footnote[https://index.okfn.org/insights/]
 
 ---
+
+### Les facteurs clés de succès
+
+
+- obtenir un soutien au plus haut niveau
+
+- configurer l’organisation pour l’ouverture 
+
+- faciliter la découverte et l’utilisation des données 
+
+- rester à l'écoute et interagir avec les usagers 
+
+---
+### Les bénéfices de l'open data
+
+.pull-left[
+![](https://datactivist.coop/occitanie/img/obs.png)
+]
+.pull-right[
+En petits groupes, analysez les [données brutes](https://docs.google.com/spreadsheets/d/1pua5fDx8gtF3R9tce9wE7wmT0ksIFjscOO7DS723iHY/edit#gid=0) et syntéhtisez  : 
+* La production d’effets bénéfiques ou d’externalités positives
+* L'optimisation de la collecte et du partage des données
+* L'amélioration de la qualité des données
+* La production d'effets négatifs ou d'impacts contre-productifs
+]
+
+
+---
+class: inverse, center, middle
+
+# 7 Aperçu des principaux acteurs politiques, économiques et associatifs de l’open data
+---
+
+### 1 - Les acteurs politiques
+
+* Etalab
+* Mission Société Numérique de l'Agence du Numérique
+* 
+
+---
+class: inverse, center, middle
+
+# 8 Les formats de données
+
+---
+
+### Des formats qui diffèrent suivant la localisation des données 
+
+→ Où se trouvent les données ?
+→ Sous quel format sont-elles conservées ?
+
+![](./img/formats_donnees.png)
+
+---
+
+### Les formats ouverts
+
+Les formats ouverts favorisent l’intéropérabilité : les
+données pourront être réutilisées indépendamment du logiciel qui a été utilisé pour
+les créer.
+
+Les principaux formats ouverts sont :
+* **Texte brut** : ASCII (.txt) / sans extension
+* **Texte formaté** : TeX (.tex), OpenDocument Text (.odt), Hypertext Markup
+Language (.htm ou .html), XHTML (.xhtml), Feuilles de style en cascade (.css)
+* **Données brutes** : CSV (.csv) / sans extension, JSON (.json), XML (.xml)
+* **Données géographiques** : KML (.kml), SHP (.shp)
+
+---
+
+### Les formats de données structurées
+
+.pull-left[
+
+**JSON**
+&gt; JSON est un format de fichier tabulaire utile pour un traitement simplifié par les ordinateurs. 
+
+**XML**
+&gt; XML est un format largement utilisé pour l’échange de données, car il conserve la structure des données et la façon dont les fichiers sont construits, et permet aux développeurs d’écrire des parties de la documentation avec les données sans interférer avec leur lecture.
+
+]
+
+.pull-right[
+
+**CSV**
+&gt; Les fichiers CSV sont compacts et permetttent de transférer de larges ensembles de données en conservant la même structure.  Il s’agit d’un fichier texte composé uniquement de caractères organisés de façon tabulaire.
+
+![](./img/format_csv.png)
+
+]
+
+---
+
+### Les formats propriétaires 
+
+Les formats des fichiers sont nombreux et sont spécifiques à des types de fichier : texte, audio, vidéo,
+image, tableur, etc. On peut distinguer les formats dits ouverts aux formats dits fermés. 
+
+Les formats fermés n'appartiennent pas au domaine public. Leur recette de fabrication est cachée, et vous serez le plus souvent contraint d'avoir le logiciel adéquat pour pouvoir lire et
+modifier un fichier convenablement. Par exemple pour lire un fichier au format .doc (Microsoft Word), vous serez contraint d'avoir le logiciel Word.
+
+* **Des alternatives à la suite Microsoft**
+
+Microsoft a tenté d'ouvrir les formats de sa suite Microsoft Office. Toutes ses extensions terminant
+par un x (.docx, .pptx, .xlsx) sont des formats sortis dans un but d'interopérabilité. Toutefois leur
+aspect ouvert fait encore débat. 
+
+&gt; Tous les formats propriétaires ne sont pas fermés. Pour reprendre le cas d'Adobe, son format
+.pdf est devenu un standard (norme ISO). Tout le monde peut ouvrir un fichier PDF.
+
+---
+
+### Ce que les formats impliquent pour .red[le traitement des données]
+
+Afin de pouvoir traiter, analyser, lire ou visualiser des données, il faut pouvoir les manipuler. 
+Le format est important parce qu'il détermine les opérations de traitement nécessaires à la réutilisation de données. 
+
+![](./img/format_et_traitement_donnees.png)
+
+---
+
+### Accessibilité des formats des données pour les humains et pour les machines
+
+![](./img/accesibilite_formats_donnees.png)
+
+.footnote [Source : **Françoise Paquienséguy, Valentyna Dymytrova**. Livrable 1.2 **Analyse de portails métropolitains de données ouvertes à l’échelle internationale**. [Rapport de recherche] 1.2, Equipe d’accueil lyonnaise en Sciences de l’information et de la communication. 2017. ffhal-01449348f] 
+
+---
+
+### [WTFCSV](https://databasic.io/en/wtfcsv/) : un outil pour prévisualiser un jeu de données en .csv
+
+![](https://datactivist.coop/occitanie/img/wtfcsv.png)
+
+---
+
 class: inverse, center, middle
 
 # Le  cycle de l'ouverture des données
@@ -868,10 +1263,6 @@ Petit exercice : en groupe, sélectionnez un jeu de données et essayez d'appliq
 
 ![](https://datactivist.coop/occitanie/img/dataproofer.png)
 ---
-### [WTFCSV](https://databasic.io/en/wtfcsv/) pour prévisualiser et contrôler un jeu de données
-
-![](https://datactivist.coop/occitanie/img/wtfcsv.png)
----
 ### Standardiser
 
 .pull-left[
@@ -931,30 +1322,7 @@ Petit exercice : en groupe, sélectionnez un jeu de données et essayez d'appliq
 
 ]
 ---
-### Les facteurs clés de succès
 
-
-- obtenir un soutien au plus haut niveau
-
-- configurer l’organisation pour l’ouverture 
-
-- faciliter la découverte et l’utilisation des données 
-
-- rester à l'écoute et interagir avec les usagers 
-
----
-### Les bénéfices de l'open data
-
-.pull-left[
-![](https://datactivist.coop/occitanie/img/obs.png)
-]
-.pull-right[
-En petits groupes, analysez les [données brutes](https://docs.google.com/spreadsheets/d/1pua5fDx8gtF3R9tce9wE7wmT0ksIFjscOO7DS723iHY/edit#gid=0) et syntéhtisez  : 
-* La production d’effets bénéfiques ou d’externalités positives
-* L'optimisation de la collecte et du partage des données
-* L'amélioration de la qualité des données
-* La production d'effets négatifs ou d'impacts contre-productifs
-]
 ---
 class: inverse, center, middle
 
