--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>L’ouverture des données publiques culturelles en pratique</title>
     <meta charset="utf-8">
     <meta name="author" content="Datactivist" />
-    <meta name="date" content="2019-07-22" />
+    <meta name="date" content="2019-07-23" />
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/datactivist.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/datactivist-fonts.css" rel="stylesheet" />
@@ -16,13 +16,13 @@ class: center, middle, inverse, title-slide
 # L’ouverture des données publiques culturelles en pratique
 ## Ministère de la Culture
 ### Datactivist
-### 22 Jul 2019
+### 23 July 2019
 
 ---
 
 
 layout: true
-  
+
 
 &lt;div class='my-footer'&gt;&lt;span&gt;L'ouverture des données publiques culturelles en pratique&lt;/span&gt; &lt;center&gt;&lt;div class=logo&gt;&lt;img src='https://github.com/datactivist/slides_datactivist/raw/master/inst/rmarkdown/templates/xaringan/resources/img/fond_noir_monochrome.png' width='0px'&gt;&lt;/center&gt;&lt;/span&gt;&lt;/div&gt; 
 
@@ -467,8 +467,17 @@ class: inverse, center, middle
 
 
 1. **Loi CADA**, dite Loi Informatique et Libertés du 6 janvier 1978.
+
 1. **Création de la CADA** (Commission d'Accès aux Documents Administratifs)
+
 1. **Création de la CNIL** (Commission Nationale Informatique et Libertés)
+
+1. **Directive INSPIRE** de 2007
+
+1. **Directive PSI** de 2013
+
+1. **Loi Valter** de 2015
+
 1. **Loi pour une République Numérique** (loi Lemaire) du 7 octobre 2016.
 
 ---
