--- a/jour1.html
+++ b/jour1.html
@@ -34,7 +34,7 @@ layout: true
 
 class: center, middle
 
-Ces slides en ligne : http://datactivist.coop/ministere-culture
+Ces slides en ligne :https://datactivist.coop/ministere-culture/jour1.html
 
 Sources : https://github.com/datactivist/ministere-culture
 
@@ -62,6 +62,8 @@ Les productions de Datactivist sont librement réutilisables selon les termes de
 
 &gt; * Appréhender les outils et les bonnes pratiques pour la mise à disposition des données et leur réutilisation. 
 
+&gt; * Comprendre les contraintes des réutilisateurs pour respecter les bonnes pratiques de l'ouverture
+
 ---
 ### Programme de la formation 
 
@@ -73,7 +75,6 @@ Les productions de Datactivist sont librement réutilisables selon les termes de
 * Cadre juridique de l’ouverture des données culturelles
 * Gouvernement ouvert et Etat plateforme : l’ouverture des données dans la modernisation de l’Etat 
 * Plusieurs cas d'étude de l’open data culturel 
-* La conception d’une stratégie d’open data : principaux leviers politiques, organisationnels, économiques 
 
 ---
 
@@ -664,13 +665,13 @@ class: center, middle
 
 ### Frise chronologique de l'évolution du .red[cadre législatif] en France
 
-<div id="htmlwidget-24c16fc4825e9057365e" class="timevis html-widget" style="width:715px;height:350px;">
+<div id="htmlwidget-c8961827ac7fde4d5c7c" class="timevis html-widget" style="width:715px;height:350px;">
 <div class="btn-group zoom-menu">
 <button type="button" class="btn btn-default btn-lg zoom-in" title="Zoom in">+</button>
 <button type="button" class="btn btn-default btn-lg zoom-out" title="Zoom out">-</button>
 </div>
 </div>
-<script type="application/json" data-for="htmlwidget-24c16fc4825e9057365e">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
+<script type="application/json" data-for="htmlwidget-c8961827ac7fde4d5c7c">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
 
 ---
 
