--- a/index.html
+++ b/index.html
@@ -656,13 +656,13 @@ class: inverse, center, middle
 
 ### Frise chronologique de l'évolution du .red[cadre législatif] en France
 
-<div id="htmlwidget-8501494a71fc8cb2f442" class="timevis html-widget" style="width:715px;height:350px;">
+<div id="htmlwidget-faf625a94b649a2e9e9b" class="timevis html-widget" style="width:715px;height:350px;">
 <div class="btn-group zoom-menu">
 <button type="button" class="btn btn-default btn-lg zoom-in" title="Zoom in">+</button>
 <button type="button" class="btn btn-default btn-lg zoom-out" title="Zoom out">-</button>
 </div>
 </div>
-<script type="application/json" data-for="htmlwidget-8501494a71fc8cb2f442">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
+<script type="application/json" data-for="htmlwidget-faf625a94b649a2e9e9b">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -732,7 +732,7 @@ http://www.vie-publique.fr/actualite/dossier/loi-internet/republique-numerique-q
 &gt; Les administrations  devront publier en ligne dans un standard ouvert leurs principaux documents, y compris leurs codes sources, ainsi que leurs bases de données qui présentent un intérêt économique, social, sanitaire ou environnemental. 
 
 
-Cette obligation concerne les *administrations d’Etat*, les *collectivités* locales de *plus de 3 500 habitants*, les établissements publics et les organismes privés chargés d’un service public.
+Cette obligation concerne les *administrations d’Etat*, les *collectivités* locales de *plus de 3 500 habitants*, les établissements publics et les organismes privés chargés d’un service public de plus de 50 agents.
 
 
 ---
@@ -743,6 +743,27 @@ L'ouverture concerne un .red[**périmètre très large**] :
 * les "bases de données"
 * les données "dont la publication présente un intérêt économique, social, sanitaire ou environnemental".
 Rares sont donc les données publiques qui ne sont pas concernées par cette obligation d'ouverture. 
+
+---
+
+### Les licences par défaut 
+
+La Loi pour une République Numérique prévoit deux licences à utiliser par défaut par les administrations pour accompagner la réutilisation gratuite de leurs données s :
+
+* **1 - La licence ouverte v2.0 (LO)**, qui permet la réutilisation la plus large possible, autorisant la reproduction, la redistribution, l’adaptation et l’exploitation commerciale des données ; 
+* **La licence Open Database License (ODbL)**, qui autorise les utilisateurs à partager, modifier et utiliser librement une base de données à condition que la rediffusion soit effectuée dans des conditions identiques (« share alike »).
+
+---
+
+### L'utilisation de .red[standards ouverts]
+&lt;img style="float:right; margin:10px"  src="https://datactivist.coop/aaf/img/openstand.png"&gt;
+
+Afin de faciliter la réutilisation des données par les machines, la loi pour une République Numérique consacre **l'utilisation de standards ouverts** pour la communication des documents administratifs. 
+
+L’administration est dorénavant tenue, lorsqu’elle communique un document administratif au format électronique, de le mettre à disposition du citoyen **"dans un standard ouvert, aisément réutilisable et exploitable par un système de traitement automatisé"**. 
+
+Concrètement, cela devrait empêcher la publication de fichiers PDF là où un fichier CSV pourrait être diffusé.
+
 
 ---
 
